<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/img_textmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/quizwiz" />

    <TextView
        android:id="@+id/msg_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/welcome_msg"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prompt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_name"
        android:textSize="26.5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg_welcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prompt_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/hint_name"
            android:textColor="@color/dark_blue" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/img_splash"
        android:layout_width="223dp"
        android:layout_height="223dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:srcCompat="@drawable/welcome_skull" />

    <Button
        android:id="@+id/btn_cta_start"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cta_btn_start"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/source_illustration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/source_illustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source_illustration"
        android:textColor="@color/light_blue"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>